--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # HTTP
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 
 # Async
 tokio = { version = "1", features = ["sync", "fs"] }
@@ -35,6 +35,7 @@ dirs = "5"
 once_cell = "1"
 
 [dev-dependencies]
+tempfile = "3.23.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 
 [features]
