--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,90 @@
-name: CI
+name: 🔐 Gatewarden CI
 
 on:
   push:
+    branches: [master, main, develop]
   pull_request:
+    branches: [master, main]
+
+env:
+  CARGO_TERM_COLOR: always
+  RUST_BACKTRACE: 1
 
 jobs:
-  rust:
-    runs-on: ubuntu-latest
+  test:
+    name: Test (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        rust: [stable]
+        include:
+          - os: ubuntu-latest
+            rust: beta
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+    - name: 📦 Checkout code
+      uses: actions/checkout@v4
 
-      - name: Install Rust (stable)
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
+    - name: 🦀 Setup Rust toolchain
+      uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ matrix.rust }}
+        components: rustfmt, clippy
 
-      - name: Format
-        run: cargo fmt --all -- --check
+    - name: 💾 Cache cargo registry
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/registry
+          ~/.cargo/git
+          target
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Clippy (deny warnings)
-        run: cargo clippy --all-features -- -D warnings
+    - name: 🎨 Check formatting
+      run: cargo fmt --all -- --check
 
-      - name: Tests
-        run: cargo test --all-features
+    - name: 🔍 Run clippy (deny warnings)
+      run: cargo clippy --all-features -- -D warnings
+
+    - name: 🧪 Run tests
+      run: cargo test --all-features --verbose
+
+  security-audit:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+    - name: 📦 Checkout code
+      uses: actions/checkout@v4
+
+    - name: 🦀 Setup Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
+
+    - name: 🔒 Run security audit
+      uses: actions-rs/audit-check@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+  publish-check:
+    name: Publish Readiness Check
+    runs-on: ubuntu-latest
+    needs: [test, security-audit]
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+    - name: 📦 Checkout code
+      uses: actions/checkout@v4
+
+    - name: 🦀 Setup Rust toolchain
+      uses: dtolnay/rust-toolchain@stable
+
+    - name: 🎯 Test publish (dry run)
+      run: cargo publish --dry-run
+
+    - name: 📋 Summary
+      if: success()
+      run: |
+        echo "## 🔐 Gatewarden Release Ready" >> $GITHUB_STEP_SUMMARY
+        echo "✅ All tests passing (ubuntu/windows/macos)" >> $GITHUB_STEP_SUMMARY
+        echo "✅ Security audit clean" >> $GITHUB_STEP_SUMMARY
+        echo "✅ Crate publish ready" >> $GITHUB_STEP_SUMMARY
