--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,16 @@
 name = "gatewarden"
 version = "0.1.0"
 edition = "2021"
+authors = ["Michael A. Kuykendall <michaelallenkuykendall@gmail.com>"]
 description = "Hardened Keygen.sh license validation infrastructure"
 license = "MIT"
-publish = false
 readme = "README.md"
 repository = "https://github.com/Michael-A-Kuykendall/gatewarden"
 homepage = "https://github.com/Michael-A-Kuykendall/gatewarden"
+documentation = "https://docs.rs/gatewarden"
 keywords = ["license", "keygen", "security", "ed25519", "offline"]
 categories = ["authentication", "cryptography", "web-programming"]
+rust-version = "1.70"
 
 [dependencies]
 # Crypto
