chore: final pre-release fixes
- Fix CHANGELOG date (2024 -> 2025)
- Update copilot-instructions: private -> public crate
- Remove stale 'do not publish' instruction
- Exclude copilot-instructions from published crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ documentation = "https://docs.rs/gatewarden"
 keywords = ["license", "keygen", "security", "ed25519", "offline"]
 categories = ["authentication", "cryptography", "web-programming"]
 rust-version = "1.70"
+exclude = [".github/copilot-instructions.md"]
 
 [dependencies]
 # Crypto
